src/test/resources/wacc_examples/valid/imports/createNewImportedClass.wacc
begin
  include "importFiles/aClass.wacc"
  c class1 = new c();
  int i = 4;
  i = call class1.f(i);
  println i
end