src/test/resources/wacc_examples/invalid/semanticErr/imports/nestedImportFilePathNotFound.wacc
begin
    include "importFiles/fileWithInvalidImport.wacc"
    skip
end